--- a/package.json
+++ b/package.json
@@ -2,12 +2,18 @@
   "name": "crust",
   "version": "0.0.1",
   "type": "module",
+  "scripts": {
+    "build": "tsup index.ts --format esm,cjs --dts"
+  },
   "dependencies": {
     "@babel/runtime": "^7.25.0",
     "@crustio/type-definitions": "^1.3.0",
     "@polkadot/api": "^12.3.1",
     "@polkadot/keyring": "^13.0.2",
-    "@polkadot/util-crypto": "^13.0.2",
-    "ipfs-unixfs-exporter": "^13.5.0"
+    "@polkadot/util-crypto": "^13.0.2"
+  },
+  "devDependencies": {
+    "tsup": "^8.2.4",
+    "typescript": "^5.5.4"
   }
 }
