--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "./dist/index.cjs",
   "module": "./dist/index.js",
   "scripts": {
-    "build": "tsup index.ts --format esm,cjs --dts"
+    "build": "tsup src/index.ts --format esm,cjs --dts"
   },
   "dependencies": {
     "@babel/runtime": "^7.25.0",
