--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "crust-api",
-  "version": "0.0.9",
+  "version": "0.0.10",
   "type": "module",
   "types": "./dist/index.d.ts",
   "main": "./dist/index.cjs",
@@ -13,6 +13,7 @@
     "@crustio/type-definitions": "^1.3.0",
     "@polkadot/api": "^12.3.1",
     "@polkadot/keyring": "^13.0.2",
+    "@polkadot/types": "^12.3.1",
     "@polkadot/util-crypto": "^13.0.2"
   },
   "devDependencies": {
